# Python_for_DS

./: LICENSE  README.md
day00/ex01/: format_ft_time.py
day00/ex02/: find_ft_type.py  tester.py
day00/ex03/: NULL_not_found.py
day00/ex04/: whatis.py
day00/ex05/: building.py
day00/ex06/: filterstring.py  ft_filter.py
day00/ex07/: sos.py
day00/ex08/: Loading.py
day00/ex09/: LICENSE  README.md  pyproject.toml  setup.py
day00/ex09/ft_package/: __init__.py
