[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
    {name = "sdarr", email = "sdarr@student.42.fr"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/sdarr/ft_package"

[tool.setuptools]
packages = ["ft_package"] 